Final commit after align css and fixed major bugs

--- a/clientcss.css
+++ b/clientcss.css
@@ -183,6 +183,12 @@ body
     transform: translateY(60px);
 }
 
+@media all and (max-width: 449px) and (min-width: 100px) {
+    .title::before {
+        transform: translateY(80px);
+    }
+  }
+
 .container .btn-success
 {
     border-radius: 20px;
